--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-modal": "^3.12.1",
     "react-scripts": "4.0.1",
     "react-spring": "^8.0.27",
+    "serve": "^11.3.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
