--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,6 +6,7 @@
       "src": "icons/manifest-icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
+      "purpose": "maskable any"
     },
     {
       "src": "icons/manifest-icon-512.png",
