--- a/package.json
+++ b/package.json
@@ -3,17 +3,16 @@
   "version": "1.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.3",
+    "@testing-library/jest-dom": "^5.13.0",
+    "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
-    "bootstrap": "^5.0.0-beta1",
+    "bootstrap": "^5.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.4.3",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
-    "react-modal": "^3.12.1",
     "react-scripts": "4.0.1",
     "react-spring": "^8.0.27",
     "serve": "^11.3.2",
