--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "1.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.13.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.6.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.1.9",
     "axios": "^0.21.1",
-    "bootstrap": "^5.0.1",
+    "bootstrap": "^5.0.2",
     "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.6.1",
-    "react-dom": "^17.0.1",
-    "react-icons": "^4.1.0",
-    "react-scripts": "4.0.1",
-    "react-spring": "^8.0.27",
-    "serve": "^11.3.2",
-    "web-vitals": "^0.2.4"
+    "react": "^17.0.2",
+    "react-bootstrap": "2.0.0-beta.2",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-scripts": "4.0.3",
+    "react-spring": "^9.2.3",
+    "serve": "^12.0.0",
+    "web-vitals": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
